#44 fix: remove double borders from EntryCard component

--- a/resources/js/component/entry-card/entry-card.sass
+++ b/resources/js/component/entry-card/entry-card.sass
@@ -13,7 +13,6 @@
 
   &__header
     display: flex
-    border-bottom: 1px solid $delimiter
     align-items: center
     gap: 10px
     padding: 10px
@@ -78,13 +77,13 @@
     font-size: 14px
 
   &__collections
+    border-top: 1px solid $delimiter
     padding: 15px
 
-  &__notes
+  &__diary
     text-align: justify
     position: relative
     border-top: 1px solid $delimiter
-    border-bottom: 1px solid $delimiter
     padding: 25px 15px
     white-space: pre-line
     font-size: 12px
